# bevy_replicon

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml  flake.nix  justfile  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: dependencies.yml  main.yml
benches/: related_entities.rs  replication.rs
bevy_replicon_example_backend/: Cargo.toml  README.md
bevy_replicon_example_backend/examples/: simple_box.rs  tic_tac_toe.rs
bevy_replicon_example_backend/src/: client.rs  lib.rs  link_conditioner.rs  server.rs  tcp.rs
bevy_replicon_example_backend/tests/: backend.rs
bevy_replicon_renet/: Cargo.toml  README.md
bevy_replicon_renet/examples/: simple_box.rs  tic_tac_toe.rs
bevy_replicon_renet/src/: bevy_renet.rs  lib.rs
bevy_replicon_renet/src/bevy_renet/: transport.rs  wrappers.rs
bevy_replicon_renet/tests/: transport.rs
examples/: move_a_box.rs  simple_box.rs  tic_tac_toe.rs
src/: client.rs  client_event.rs  component_rules.rs  core.rs  lib.rs  network_event.rs  parent_sync.rs  replication_core.rs  replication_rules.rs  replicon_core.rs  scene.rs  server.rs  server_event.rs  shared.rs  test_app.rs  test_network.rs  tick.rs  world_diff.rs
src/client/: client_mapper.rs  confirm_history.rs  confirmed.rs  diagnostics.rs  event.rs  events.rs  map_entity.rs  replicon_client.rs  server_entity_map.rs  server_mutate_ticks.rs
src/client/events/: event_data.rs
src/client_event/: client_event_data.rs
src/core/: channels.rs  command_markers.rs  common_conditions.rs  component_rules.rs  connected_client.rs  connected_clients.rs  ctx.rs  deferred_entity.rs  entity_serde.rs  event.rs  event_registry.rs  network_channels.rs  postcard_utils.rs  replicated_archetypes.rs  replicated_clients.rs  replication.rs  replication_fns.rs  replication_registry.rs  replication_rules.rs  replicon_channels.rs  replicon_client.rs  replicon_server.rs  replicon_tick.rs  server_entity_map.rs  tick.rs
src/core/backend/: replicon_channels.rs  replicon_client.rs
src/core/event/: client_event.rs  client_trigger.rs  ctx.rs  event_fns.rs  event_registry.rs  remote_event_registry.rs  server_event.rs  server_trigger.rs  trigger.rs
src/core/event/server_event/: client_event_queue.rs
src/core/event_registry/: client_event.rs  ctx.rs  server_event.rs
src/core/replication/: change_message_arrays.rs  change_message_flags.rs  client_ticks.rs  command_markers.rs  init_message_arrays.rs  mutate_index.rs  replicated_clients.rs  replication_registry.rs  replication_rules.rs  update_message_flags.rs
src/core/replication/replicated_clients/: client_visibility.rs
src/core/replication/replication_registry/: command_fns.rs  component_fns.rs  ctx.rs  rule_fns.rs  test_fns.rs
src/core/replication_fns/: command_fns.rs  component_fns.rs  ctx.rs  rule_fns.rs  serde_fns.rs  test_fns.rs
src/core/replication_registry/: command_fns.rs  component_fns.rs  rule_fns.rs  test_fns.rs
src/network_event/: client_event.rs  server_event.rs  test_events.rs
src/replicon_core/: dont_replicate.rs  not_replicate.rs  replication_rules.rs  replicon_tick.rs  world_diff.rs
src/server/: client_cache.rs  client_entity_map.rs  client_visibility.rs  clients_info.rs  connected_clients.rs  copy_buffer.rs  despawn_buffer.rs  despawn_tracker.rs  event.rs  events.rs  message.rs  mod.rs  prediction_tracker.rs  related_entities.rs  removal_buffer.rs  removal_tracker.rs  removals_reader.rs  replicated_archetypes.rs  replicated_archetypes_info.rs  replicated_clients.rs  replicated_world.rs  replication_buffer.rs  replication_messages.rs  replication_read_world.rs  replicaton_buffer2.rs  replicon_entity_map.rs  replicon_server.rs  replicon_tick.rs  server_tick.rs  server_world.rs  world_buffers.rs
src/server/clients_info/: client_visibility.rs
src/server/connected_clients/: client_visibility.rs
src/server/events/: event_data.rs
src/server/message/: replication_buffer.rs
src/server/replication_messages/: change_message.rs  change_ranges.rs  component_changes.rs  init_message.rs  mutate_message.rs  mutations.rs  replication_buffer.rs  serialized_data.rs  update_message.rs  updates.rs
src/server_event/: server_event_data.rs
src/shared/: backend.rs  common_conditions.rs  entity_serde.rs  event.rs  postcard_utils.rs  protocol.rs  replication.rs  replicon_tick.rs  server_entity_map.rs
src/shared/backend/: connected_client.rs  replicon_channels.rs  replicon_client.rs  replicon_server.rs
src/shared/event/: client_event.rs  client_trigger.rs  ctx.rs  event_fns.rs  remote_event_registry.rs  remote_targets.rs  server_event.rs  server_trigger.rs
src/shared/event/server_event/: client_event_queue.rs
src/shared/replication/: client_ticks.rs  command_markers.rs  deferred_entity.rs  mutate_index.rs  related_entities.rs  replication_registry.rs  replication_rules.rs  track_mutate_messages.rs  update_message_flags.rs
src/shared/replication/replication_registry/: command_fns.rs  component_fns.rs  ctx.rs  rule_fns.rs  test_fns.rs
tests/: bidirectional_event.rs  changes.rs  client_event.rs  client_trigger.rs  component_rules.rs  connection.rs  despawn.rs  fns.rs  init_replication.rs  insertion.rs  mutate_ticks.rs  mutations.rs  other.rs  removal.rs  replication.rs  scene.rs  server_event.rs  server_trigger.rs  spawn.rs  stats.rs  update_replication.rs  visibility.rs
tests/common/: mod.rs
tests/connect/: mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
