[package]
name = "bevy_replicon"
version = "0.30.0"
authors = [
  "Hennadii Chernyshchyk <genaloner@gmail.com>",
  "koe <ukoe@protonmail.com>",
]
edition = "2021"
description = "High level networking for the Bevy game engine"
readme = "README.md"
repository = "https://github.com/projectharmonia/bevy_replicon"
keywords = [
  "bevy",
  "multiplayer",
  "netcode",
  "replication",
  "server-authoritative",
]
categories = ["game-development", "network-programming"]
license = "MIT OR Apache-2.0"
include = ["/benches", "/src", "/tests", "/LICENSE*"]

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--cfg", "docsrs"]
all-features = true

[workspace]
members = ["bevy_replicon_example_backend"]

[workspace.dependencies]
bevy = { version = "0.15", default-features = false }
serde = "1.0"

[dependencies]
bevy = { workspace = true, features = ["serialize"] }
thiserror = "2.0"
typeid = "1.0"
bytes = "1.5"
bincode = "1.3"
serde.workspace = true
integer-encoding = "4.0"
ordered-multimap = "0.7"
bitflags = "2.6"

[dev-dependencies]
bevy = { workspace = true, features = [
  "serialize",
  "bevy_asset",
  "bevy_scene",
  "bevy_sprite",
] }
criterion = { version = "0.5", default-features = false, features = [
  "cargo_bench_support",
] }

[features]
default = ["scene", "parent_sync", "client", "server"]

# Client-related logic.
client = []

# Server-related logic.
server = []

# Integration with Bevy diagnostics for client.
client_diagnostics = ["client"]

# Replication into a scene.
scene = ["bevy/bevy_scene"]

# Hierarchy synchronization.
parent_sync = []

[[bench]]
name = "replication"
harness = false

[[test]]
name = "mutations"
required-features = ["client", "server"]

[[test]]
name = "client_event"
required-features = ["client", "server"]

[[test]]
name = "client_trigger"
required-features = ["client", "server"]

[[test]]
name = "connection"
required-features = ["client", "server"]

[[test]]
name = "despawn"
required-features = ["client", "server"]

[[test]]
name = "fns"
required-features = ["client"]

[[test]]
name = "insertion"
required-features = ["client", "server"]

[[test]]
name = "removal"
required-features = ["client", "server"]

[[test]]
name = "scene"
required-features = ["scene"]

[[test]]
name = "server_event"
required-features = ["client", "server"]

[[test]]
name = "server_trigger"
required-features = ["client", "server"]

[[test]]
name = "spawn"
required-features = ["client", "server"]

[[test]]
name = "stats"
required-features = ["client_diagnostics", "client", "server"]

[[test]]
name = "visibility"
required-features = ["client", "server"]

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
