[package]
name = "bevy_replicon_example_backend"
version = "0.30.1"
authors = [
  "Hennadii Chernyshchyk <genaloner@gmail.com>",
  "koe <ukoe@protonmail.com>",
]
edition = "2021"
description = "A simple transport intended only for examples"
readme = "README.md"
repository = "https://github.com/projectharmonia/bevy_replicon"
keywords = [
  "bevy",
  "multiplayer",
  "netcode",
  "replication",
  "server-authoritative",
]
categories = ["game-development", "network-programming"]
license = "MIT OR Apache-2.0"
include = ["/src", "../LICENSE*"]

[dependencies]
bevy = { version = "0.15", default-features = false }
bevy_replicon = { path = "..", version = "0.30", default-features = false }

[dev-dependencies]
bevy = { version = "0.15", default-features = false, features = [
  "bevy_text",
  "bevy_ui",
  "bevy_gizmos",
  "bevy_state",
  "bevy_window",
  "x11",
  "default_font",
] }
serde = "1.0"
clap = { version = "4.1", features = ["derive"] }

[features]
default = ["client", "server"]
server = ["bevy_replicon/server"]
client = ["bevy_replicon/client"]
