[package]
name = "bevy_replicon_example_backend"
version = "0.31.0"
authors = [
  "Hennadii Chernyshchyk <genaloner@gmail.com>",
  "koe <ukoe@protonmail.com>",
]
edition = "2021"
description = "A simple transport intended only for examples"
readme = "README.md"
repository = "https://github.com/projectharmonia/bevy_replicon"
keywords = [
  "bevy",
  "multiplayer",
  "netcode",
  "replication",
  "server-authoritative",
]
categories = ["game-development", "network-programming"]
license = "MIT OR Apache-2.0"
include = ["/src", "../LICENSE*"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false }
bevy_replicon = { path = "..", version = "0.31", default-features = false }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [
  "bevy_text",
  "bevy_ui",
  "bevy_gizmos",
  "bevy_state",
  "bevy_window",
  "x11",
  "std",
  "bevy_picking",
  "bevy_ui_picking_backend",
  "default_font",
] }
serde = "1.0"
clap = { version = "4.1", features = ["derive"] }

[features]
default = ["client", "server"]
server = ["bevy_replicon/server"]
client = ["bevy_replicon/client"]
