[package]
name = "bevy_replicon_renet"
version = "0.2.0"
authors = [
  "Hennadii Chernyshchyk <genaloner@gmail.com>",
  "koe <ukoe@protonmail.com>",
]
edition = "2021"
description = "Integration with renet for bevy_replicon"
readme = "../README.md"
repository = "https://github.com/projectharmonia/bevy_replicon"
keywords = [
  "bevy",
  "multiplayer",
  "netcode",
  "replication",
  "server-authoritative",
]
categories = ["game-development", "network-programming"]
license = "MIT OR Apache-2.0"
include = ["/src", "/tests", "../LICENSE*"]

[dependencies]
bevy_replicon = { version = "0.25", path = ".." }
bevy_renet = { version = "0.0.11", default-features = false }
bevy = { version = "0.13", default-features = false }

[dev-dependencies]
serde = "1.0"
clap = { version = "4.1", features = ["derive"] }
bevy = { version = "0.13", default-features = false, features = [
  "bevy_text",
  "bevy_ui",
  "bevy_gizmos",
  "x11",
  "default_font",
] }

[features]
default = ["renet_serde", "renet_transport"]

# Re-exports of renet features
renet_serde = ["bevy_renet/serde"]
renet_transport = ["bevy_renet/transport"]

[[test]]
name = "transport"
required-features = ["renet_transport"]
